other-mpol/inject-coco-initdata/.chainsaw-test/exception-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    coco.io/initdata-configmap: coco-initdata
  labels:
    coco: enabled
  name: exception-pod-coco
  namespace: default
spec:
  containers:
  - image: nginx:1.21.0
    name: nginx
